nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  namespace: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - kube.makerdark98.dev
    secretName: letsencrypt-prod
  rules:
  - host: kube.makerdark98.dev
    http:
      paths:
      - path: /jupyter
        pathType: Prefix
        backend:
          service:
            name: headless-svc-base-notebook
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: headless-svc-grafana
            port:
              number: 80
