nginx/register-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-dashboard-ingress
  namespace: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - registry-dashboard.makerdark98.dev
    secretName: registry-dashboard-certificate
  rules:
  - host: registry-dashboard.makerdark98.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headless-svc-registry-dashboard
            port:
              number: 80
