nginx/register-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://registry-dashboard.makerdark98.dev"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
  - hosts:
    - registry.makerdark98.dev
    secretName: registry-certificate
  rules:
  - host: registry.makerdark98.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headless-svc-registry
            port:
              number: 5000
